gw2t.css
/* ... */
/* @@Map pane
----------------------------------------------------------------------------- */
#mapPane, #wvwPane {
	height: 100%;
	min-height: 220px;
	background: url("img/background/space.jpg") repeat center;
}
#wvwPane {
	display: none;
	background: white;
}

/* Bottom side: Timeline */
#itemTimeline {
	position: absolute;
	bottom: 48px;
	margin-left: 24px;
	width: calc(100% - 48px);
	z-index: 1;
}
.tmlLine {
	height: 24px;
}
.tmlLine:hover .tmlSegment {
	outline: 1px solid #ff8844;
}
.tmlLine:hover .tmlName {
	opacity: 1;
}
.tmlLine:hover .tmlSegmentTitle {
	opacity: 1;
}
.tmlSegment {
	display: inline-block;
	height: 100%;
	vertical-align: middle;
	overflow: hidden;
	background: rgba(0, 0, 0, 0.2);
	outline: 1px solid rgba(255, 136, 68, 0.2);
}
.tmlName {
	position: absolute;
	margin-top: -10px;
	font-size: 12px;
	color: #ffaa22;
	opacity: 0.7;
}
.tmlSegmentTitle {
	margin-left: 6px;
	font-family: Menomonia;
	font-size: 16px;
	color: #ccc;
	text-shadow: 0px 0px 4px black;
	opacity: 0.7;
}
.tmlSegmentTime {
	margin-left: 4px;
	font-size: 10px;
	color: #bbcc77;
	text-shadow: 0px 0px 4px black;
	opacity: 0.9;
}
.tmlSegmentActive {
	background: rgba(255, 136, 68, 0.2);
	outline: 1px solid rgba(0, 0, 0, 0.2);;
}
.tmlSegmentActive .tmlSegmentTitle {
	opacity: 1;
}
#tmlIndicator {
	display: block;
	top: -10%;
	width: 2px; height: 110%;
	position: absolute;
	background: lime;
	opacity: 0.6;
}

/* Top right corner: Dashboard */
#itemDashboard {
	display: none;
	position: absolute;
	top: 32px; right: 12px;
	z-index: 10;
	margin-top: 4px;
	padding: 4px 10px 4px 10px;
	font-family: Menomonia;
	font-size: 16px;
	color: #bbcc77;
	text-shadow: 0px 0px 4px black;
	background: rgba(0, 0, 0, 0.4);
	border-radius: 8px;
}
#itemDashboard a {
	color: #bbcc77;
}
#itemDashboard a:hover, #dsbSaleHeader:hover u {
	color: #44dd44;
}
#dsbAnnouncement img:hover {
	opacity: 0.8;
}
#dsbClose {
	position: absolute;
	top: -16px;
	left: -16px;
	width: 32px; height: 32px;
	background: url("img/ui/close.png");
	opacity: 0.4;
}
#dsbClose:hover {
	opacity: 0.8;
}
#dsbCountdown time {
	font-family: Consolas, monospace;
	font-size: 18px;
	color: #ddff77;
}
#dsbCountdown code {
	margin-right: 8px;
}
.dsbCountdownDormant {
	color: #7f807f;
}
.dsbCountdownActive {
	color: lime;
}
#dsbSaleHeader:active {
	opacity: 0.8;
}
#dsbSaleTable {
	max-height: 320px;
}
#dsbSaleCol0, #dsbSaleCol1 {
	display: inline-block;
	vertical-align: top;
}
#dsbSaleCol0 {
	margin-left: 32px;
}
.dsbSaleEntry {
	width: 256px;
	white-space: nowrap;
}
.dsbSaleIcon {
	width: 32px; height: 32px;
	border-radius: 4px;
}
.dsbSaleEntry:hover .dsbSaleIcon {
	width: 64px; height: 64px;
	opacity: 0.9;
	border-radius: 16px;
}
.dsbSalePriceMoney {
	display: none;
	color: #ffde9d;
}
.dsbSaleEntry:hover .dsbSalePriceMoney {
	display: inline;
}
.dsbSaleEntry:hover .dsbSalePriceCoin {
	display: none;
}
.dsbSalePriceNew {
	color: white;
}
.dsbSalePriceOld {
	color: #b3a082;
}

#dsbStory {
	display: none;
	width: auto; max-height: 120px;
	border-bottom: 1px solid #dd9900;
}
#dsbStoryTitle {
	display: block;
	width: 100%;
	margin-top: 4px;
	border-top: 1px solid #dd9900;
	text-align: center;
	font-size: 18px;
	font-weight: bold;
	color: #dd9900;
}
#dsbStory .chnBar {
	width: auto;
	line-height: 100%;
	background: rgba(26, 17, 9, 0.4);
}
#dsbStory .chnDetails ol li {
	overflow: visible;
}
#dsbStory .chnDetailsExtra {
	margin-top: -26px;
}

/* Bottom left corner: Coordinates bar */
#itemMapCoordinates, #itemWvWCoordinates {
	position: absolute;
	bottom: 12px; left: 12px;
	z-index: 9;
}
#itemMapCoordinates input, #itemWvWCoordinates input {
	display: inline-block;
	width: 90px;
	height: 16px;
	padding: 3px 6px 3px 6px;
	margin-left: 12px;
	border: none;
	border-bottom: 1px solid gray;
	background: black;
	color: #ddff77;
	opacity: 0.6;
}
#itemMapCoordinates input::selection, #itemWvWCoordinates input::selection {
	background: #66aaff;
}
input#mapCoordinatesName, input#wvwCoordinatesName {
	width: 145px; 
}
#itemMapTime {
	display: none;
}

/* Right side: Misc links */
.itemMapPeripheral {
	display: inline-block;
	width: 520px; /* This becomes the maximum size of the HUD popup divs */
	text-align: right;
}
.itemMapPeripheral div {
	text-align: left;
}
#itemMapPeripheralNorth, #itemWvWLinksNorth {
	position: absolute;
	top: 4px; right: 12px;
	z-index: 9;
}
#itemMapPeripheralSouth {
	position: absolute;
	bottom: 4px; right: 12px;
	z-index: 9;
}
#itemLogo {
	margin-right: 2px;
}
.itemMapPeripheral img {
	width: 32px; height: 32px;
}
.itemMapPeripheral { /* Links on the map pane */
	font-family: Menomonia;
	font-size: 18px;
	color: #ffeebb;
}
.itemMapPeripheral a, .itemMapPeripheral span {
	text-decoration: none;
	color: #ffeebb;
	opacity: 0.6;
}
.itemMapPeripheral a:hover {
	color: #ddff77;
	opacity: 0.9;
}
#mapQuickURL {
	display: inline;
	margin-right: 8px;
}

/* Map HUD */
.mapHUDContainer {
	display: inline-block;
	width: 32px;
	margin-left: -4px; /* This squeezes the HUD buttons closer */
}
.mapHUDButton {
	display: inline-block;
	opacity: 0.6;
}
.itemMapPeripheral:hover .mapHUDButton {
	opacity: 0.8;
}
.mapHUDContainer:hover .mapHUDButton {
	opacity: 1;
	width: 36px; height: 36px;
	margin: -4px 0px -4px -2px; /* Subtract to keep its original size of 32px */
}
.mapHUDPopup {
	display: none;
}
.mapHUDContainer:hover .mapHUDPopup {
	display: block;
	position: absolute;
	right: 0px;
	margin: 0;
	padding: 10px;
	box-shadow: 0px 0px 2px #555;
	opacity: 0;
}

#mapGPS, #wvwGPS { /* Only shown in overlay mode */
	display: none;
}

/* Map options */
#mapOptionsDisplay, #mapOptionsOther,
#wvwOptionsDisplay, #wvwOptionsOther{
	display: inline-block;
	vertical-align: top;
}
#mapOptionsDisplay, #wvwOptionsDisplay {
	padding-right: 8px;
	margin-right: 4px;
	border-right: 1px solid gray;
}
#mapOptionsCompletion, #wvwOptionsCompletion {
	margin-bottom: 8px;
	border-bottom: 1px solid gray;
}
#mapOptionsCompletion label, #wvwOptionsCompletion label {
	margin: 0;
	padding: 0;
}
/* ... */

